# kube-sre-gym

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN_ADVERSARIAL_JUDGE.md  Dockerfile  IMPROVEMENT_GUIDE.md  README.md  __init__.py  client.py  eval.py  kube_sre_gym_colab.ipynb  models.py  openenv.yaml  plot_rewards.py  pyproject.toml  requirements.txt  test_connection.py  train.py
k8s_sre_env/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
k8s_sre_env/server/: Dockerfile  app.py  judge.py  k8s_backend.py  k8s_environment.py  llm_client.py  requirements.txt  scenario_generator.py
kube_sre_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
kube_sre_env/server/: Dockerfile  __init__.py  app.py  curriculum.py  judge.py  k8s_backend.py  kube_sre_env_environment.py  requirements.txt  scenario_generator.py
sample_app/: cleanup.sh  deploy_all.sh  namespaces.yaml
sample_app/auth/: auth-db.yaml  auth-service.yaml
sample_app/base/auth/: auth-db.yaml  auth-service.yaml
sample_app/base/frontend/: frontend-cache.yaml  web-app.yaml
sample_app/base/hackathon/: api-server.yaml  auth-service.yaml  ml-worker.yaml  payment-service.yaml  redis.yaml  web-app.yaml
sample_app/base/payments/: payment-api.yaml  payment-db.yaml  payment-gateway.yaml  payment-worker.yaml
sample_app/frontend/: frontend-cache.yaml  web-app.yaml
sample_app/hackathon/complex/: api-gateway.yaml  app-config.yaml  backend-svc.yaml  deny-backend-egress.yaml  gpu-trainer.yaml  order-service.yaml
sample_app/hackathon/eval/: eval-crash-v2.yaml  eval-liveness.yaml  eval-missing-volume.yaml  eval-oom-v2.yaml
sample_app/hackathon/training/: api-server.yaml  auth-service.yaml  ml-worker.yaml  payment-service.yaml  redis.yaml  web-app.yaml
sample_app/payments/: payment-api.yaml  payment-db.yaml  payment-gateway.yaml  payment-worker.yaml
server/: __init__.py  adversarial_designer.py  app.py  constants.py  curriculum.py  judge.py  k8s_backend.py  k8s_commands.py  k8s_injectors.py  kube_sre_gym_environment.py  llm_client.py  scenario_generator.py
